# gst-avsynctestsrc

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.md  configure.ac  plugin.json
src/: Makefile.am  avsynctestaudiosrc.c  avsynctestaudiosrc.h  avsynctestsrc-plugin.c  avsynctestvideosrc.c  avsynctestvideosrc.h
test-scripts/: inspect-avsynctestaudiosrc.sh  inspect-avsynctestvideosrc.sh  run-avsynctestaudiosrc.sh  run-avsynctestvideosrc.sh
